permission-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: permission-dep
spec:
  selector:
    matchLabels:
      app: permission-dep
  template:
    metadata:
      labels:
        app: permission-dep
    spec:
      containers:
      - name: permission-dep
        image: thatcoldtoast/bird-api-permission
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5672
