permission-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: permission
spec:
  selector:
    app: permission
  ports:
  - port: 5672
    targetPort: 5672
