rabbitmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  selector:
    app: rabbitmq-dep
  ports:
  - port: 5672
    targetPort: 5672
